--- a/web/src/static/css/style.scss
+++ b/web/src/static/css/style.scss
@@ -72,3 +72,15 @@ input,
 textarea {
     outline: none;
 }
+
+// .body-content p {
+//     max-height: 5rem;
+//     font-size: 1.2rem;
+//     line-height: 2rem;
+//     margin: 0;
+//     letter-spacing: 0.1rem;
+//     color: grey;
+//     display: -webkit-box;
+//     overflow: hidden;
+//     text-overflow: ellipsis;
+// }
