首页 关于页样式更新

--- a/web/src/static/css/media.queries.scss
+++ b/web/src/static/css/media.queries.scss
@@ -122,4 +122,9 @@
         margin-left: 1rem;
         border-left: .3rem solid #b7c3c1;
     }
+
+    /* 首页 */
+    #home .home-title {
+        font-size: 2rem;
+    }
 }
