移动端样式更新

--- a/web/src/static/css/media.queries.scss
+++ b/web/src/static/css/media.queries.scss
@@ -128,5 +128,11 @@
     #home .home-title {
         font-size: 2rem;
     }
+
+    /* 开发日志页 */
+    .log-items > li {
+        border-radius: 1rem;
+        font-size: 1.1rem;
+    }
     
 }
