--- a/web/src/static/css/media.queries.scss
+++ b/web/src/static/css/media.queries.scss
@@ -129,6 +129,10 @@
         font-size: 2rem;
     }
 
+    #home .list-item {
+        border-radius: 1rem;
+    }
+
     /* 开发日志页 */
     .log-items > li {
         border-radius: 1rem;
