--- a/web/src/static/css/v-html.scss
+++ b/web/src/static/css/v-html.scss
@@ -17,3 +17,9 @@
     border-bottom: 1px solid red;
     transition: all .3s;
 }
+
+.article-content p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
