--- a/web/src/static/css/media.queries.scss
+++ b/web/src/static/css/media.queries.scss
@@ -139,4 +139,10 @@
         font-size: 1.1rem;
     }
     
+    /* 备案 */
+    #sidebar .beian {
+        width: 10%;
+        position: fixed;
+        left: 0;
+    }
 }
