--- a/web/src/static/css/style.scss
+++ b/web/src/static/css/style.scss
@@ -192,7 +192,7 @@ input:focus {
     box-shadow: 0 0 0.8rem 0 #aaa;
     padding: 1rem;
     border-radius: 1rem;
-    width: 60vw;
+    min-width: 40vw;
     margin: 1rem 6rem;
 }
 
