--- a/web/src/static/css/style.scss
+++ b/web/src/static/css/style.scss
@@ -169,3 +169,13 @@ textarea:focus {
     bottom: 40px;
     right: 40px;
 }
+
+/* 顶部栏 */
+.tool-bar {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    margin-right: 1rem;
+    padding: 1rem 0;
+}
