--- a/web/src/static/css/style.scss
+++ b/web/src/static/css/style.scss
@@ -141,41 +141,23 @@ textarea:focus {
     color: rgb(96, 126, 121);
     // border-bottom: 1px solid rgb(96, 126, 121);
 }
-/** 分页器 */
-// .pagination {
-//     text-align: center;
-//     margin-top: 2rem;
-//     color: rgb(96, 126, 121);
-// }
-// .page-input {
-//     width: 8%;
-//     padding: 0.3rem 0.6rem;
-// }
-// .pagination > span::before,
-// .pagination > span::after {
-//     content: '  ';
-//     font-size: 1.3rem;
-//     font-weight: 800;
-// }
-// .unselectable {
-//     background-color: rgb(96, 126, 121);
-//     cursor: default;
-// }
-// .pagination .btn-small {
-//     padding: 0.5rem;
-// }
 .pagination {
     position: fixed;
     bottom: 40px;
     right: 40px;
 }
-
 /* 顶部栏 */
 .tool-bar {
     display: flex;
+    margin: 1rem 1rem 0 0;
     flex-direction: row;
     align-items: flex-end;
     justify-content: flex-end;
-    margin-right: 1rem;
-    padding: 1rem 0;
+    padding: 0;
+    &-item {
+        margin-right: 1rem;
+    }
+    &-item:last-child {
+        margin-right: 0;
+    }
 }
