--- a/web/src/static/css/style.scss
+++ b/web/src/static/css/style.scss
@@ -182,3 +182,51 @@ textarea {
     justify-content: flex-end;
     box-shadow: 0 -7px 8px -8px rgb(143, 140, 140);
 }
+
+.article-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 15px;
+    overflow: auto;
+    box-shadow: -7px 0 8px -8px rgb(143, 140, 140),
+        7px 0 8px -8px rgb(143, 140, 140), 0 7px 8px -8px rgb(143, 140, 140),
+        0 -7px 8px -8px rgb(143, 140, 140);
+    margin: 1rem auto;
+    height: 60px;
+    width: 80%;
+    padding: 1rem;
+    cursor: pointer;
+    .article-title {
+        font: {
+            weight: 300;
+            size: 1.2rem;
+        }
+    }
+    .article-time {
+        font: {
+            weight: 300;
+            size: 1.2rem;
+        }
+    }
+    .article-attributes {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        &-type {
+            margin-right: 1rem;
+            margin-right: 1rem;
+            padding-right: 1rem;
+            box-shadow: 5px 0 5px -5px rgb(143, 140, 140);
+        }
+    }
+}
+
+.article-card:hover {
+    box-shadow: -7px 0 5px -5px rgb(143, 140, 140),
+        7px 0 5px -5px rgb(143, 140, 140), 0 7px 5px -5px rgb(143, 140, 140),
+        0 -7px 5px -5px rgb(143, 140, 140);
+    transform: scale(1.05);
+    transition: 0.5s;
+}
