--- a/web/src/static/css/style.scss
+++ b/web/src/static/css/style.scss
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+html {
+    background: linear-gradient(
+        to right,
+        rgba($color: #70e1f5, $alpha: 0.9),
+        rgba($color: #ffd194, $alpha: 0.9)
+    );
+}
+
 /* 伪类清除浮动 */
 .clearfix::after {
     display: block;
